2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/23_divide_by_zero.deca
// Description :
//  divsion par 0 sa passe pour B  
// Resultats :
//    Valide pour B 
//
// Historique :
// cree le 10/01/2024

{
    float f = 2/0 ;
}