2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/12_assign_rvalue_non_declare.deca
// Description :
//      affcetation par une variable non déclarée  
// Resultats :
//    Erreur Contexteulle : fichier.deca:11:8:a identificateur non déclaré
//
// Historique :
// cree le 10/01/2024

{
    int x ; 
    x = a ;
}